<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash_Screen"
    android:background="@drawable/splash_bg"
    >

    <TextView
        android:id="@+id/tvHeaddingOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/splash_headding_one"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvHeaddingTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeaddingOne"
        android:paddingStart="30dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tvHeaddingTwo"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEnterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_8sdp"
        app:cardElevation="@dimen/_8sdp"
        android:layout_below="@+id/tvHeaddingTwo"
        app:cardBackgroundColor="@color/button_red"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/enter_now"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:textSize="14sp"
                android:drawableEnd="@drawable/ic_right_arrow"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>