<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitPaymentFormData">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF" />



    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progressBarregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:gravity="left"
                android:fontFamily="@font/poppins"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_margin="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/myTextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCustomerName"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/customer_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_11sdp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/myTextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etInvoiceNumber"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/invoice_number"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_11sdp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/myTextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etInvoiceDate"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/invoice_date"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_11sdp"
                        android:clickable="true"
                        android:focusable="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/myTextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAmountDeposited_transferred"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/amount_deposited_transferred"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_11sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/myTextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDeposittedDate"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/depositted_date"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_11sdp"
                        android:clickable="true"
                        android:focusable="false"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:textColorHint="@color/black"
                    android:theme="@style/myTextInputLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUTR_number"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/utr_number"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_11sdp" />

                </com.google.android.material.textfield.TextInputLayout>





                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/rounded_button_red"
                    android:fontFamily="@font/poppins"
                    android:text="@string/submit"
                    android:textColor="@color/white">

                </Button>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>