<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/rl_one_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <View
                android:id="@+id/v_one_login"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/tool_bar_color" />


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_one_login"
            android:layout_width="@dimen/_290sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:elevation="@dimen/_10sdp"

            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center|left"
                    android:text="@string/submit_payment_details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cv_one_login"
            >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

        <ProgressBar
            android:id="@+id/subproductprogress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center"
             />

        <TextView
            android:id="@+id/tvNoRecordsFound"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_12sdp"
            android:fontFamily="@font/poppins_semibold"
           android:gravity="center"
            android:text="@string/no_records_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:visibility="gone"

            android:layout_centerInParent="true"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvManualPayments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subproductprogress"
                android:layout_centerInParent="true"

                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="70dp"
                android:visibility="visible"
                tools:listitem="@layout/row_item_manual_payment" />
        </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
        <ScrollView
            android:id="@+id/llForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/cv_one_login"

            android:visibility="gone">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBarregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/poppins"
                    android:gravity="left"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:theme="@style/myTextInputLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCustomerName"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/customer_name"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:theme="@style/myTextInputLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etInvoiceNumber"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/invoice_number"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:theme="@style/myTextInputLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etInvoiceDate"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:drawablePadding="@dimen/_10sdp"
                            android:focusable="false"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/invoice_date"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:theme="@style/myTextInputLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAmountDeposited_transferred"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/amount_deposited_transferred"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:theme="@style/myTextInputLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDeposittedDate"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:drawablePadding="@dimen/_10sdp"
                            android:focusable="false"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/depositted_date"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:theme="@style/myTextInputLabel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUTR_number"
                            android:layout_width="@dimen/_250sdp"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/poppins"
                            android:hint="@string/utr_number"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_11sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="@dimen/_230sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/rounded_button_red"
                        android:fontFamily="@font/poppins"
                        android:text="@string/submit"
                        android:textColor="@color/white">

                    </Button>

                </LinearLayout>


            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_baseline_add_24"
        app:fabSize="normal"

        />


</RelativeLayout>